Search history of a book or a member